# xiao-ble-lsm6dsv16x

./: .gitignore  README.md  west.yml
.github/workflows/: build-using-docker.yml  docs.yml
app/: CMakeLists.txt  Kconfig  Kconfig.usb_mass_storage  debug.conf  overlay_edge_impulse.conf  overlay_smp_bt.conf  overlay_usb_mass_storage.conf  pm_static.yml  prj.conf  prj_usb_mass_storage.conf  sample.yaml  secrets-example.cmake
app/boards/: xiao_ble_nrf52840_sense.overlay
app/src/: main.c
app/src/battery/: CMakeLists.txt  battery.c  battery.h  battery_shell.c
app/src/edge-impulse/: CMakeLists.txt  impulse.c  impulse.h
app/src/emulator/: CMakeLists.txt  emulator.c  emulator.h
app/src/fsm/: fsm_long_touch.h
app/src/log_fs/: CMakeLists.txt  log_fs.c  log_fs.h
app/src/state_machine/: CMakeLists.txt  state_machine.c  state_machine.h  state_machine_shell.c
app/src/ui/: CMakeLists.txt  ui.c  ui.h
app/src/usb_mass_storage/: CMakeLists.txt  usb_mass_storage.c  usb_mass_storage.h  usb_mass_storage_shell.c
boards/nicoco/: Kconfig  Kconfig.defconfig  Kconfig.nicoco  board.cmake  board.yml  nicoco-pinctrl.dtsi  nicoco.dts  nicoco.yaml  nicoco_0_1_0.overlay  nicoco_0_3_0.overlay  nicoco_common.dtsi  nicoco_defconfig  nicoco_nrf52840_sense.dts  nicoco_nrf52840_sense.yaml  nicoco_nrf52840_sense_0_2_0.overlay  nicoco_nrf52840_sense_defconfig  pcb_conf_0_1_0.dtsi  pcb_conf_0_2_0.dtsi  pcb_conf_0_3_0.dtsi
lib/: CMakeLists.txt  Kconfig
lib/fit_sdk/: CMakeLists.txt  Kconfig  fit_sdk.c
lib/gopro_bluetooth/: CMakeLists.txt  Kconfig  gopro_bluetooth.c
lib/lsm6dsv16bx/: CMakeLists.txt  Kconfig  Kconfig.template.fsm_alg  lsm6dsv16bx.c  lsm6dsv16bx_sflp_utils.c  lsm6dsv16bx_sflp_utils.h
lib/lsm6dsv16x/: CMakeLists.txt  Kconfig  Kconfig.template.fsm_alg  lsm6dsv16x.c  lsm6dsv16x_sflp_utils.c  lsm6dsv16x_sflp_utils.h
lib/smp_bluetooth/: CMakeLists.txt  Kconfig  (+1 more)
scripts/: west-commands.yml  west_prepare_dfu.py
(+26 files in other folders)
